Added Vector DB for Long Term Storage
